Edited wiki page V8Convert_ClassCreator through web user interface.

--- a/wiki/V8Convert_ClassCreator.wiki
+++ b/wiki/V8Convert_ClassCreator.wiki
@@ -41,14 +41,12 @@ struct MyType
     }
     
     // Ctors we want to bind to v8 (there are several other ways to do this):
-    typedef cv::tmp::TypeList<
-            //cv::Signature<void ( // this also works.
-                cv::CtorForwarder<MyType *()>,
-                cv::CtorForwarder<MyType *(char const *)>,
-                cv::CtorForwarder<MyType *( int, double )>,
-                cv::CtorForwarder<MyType *( v8::Arguments const &)>
-            //)
-            > Ctors;
+    typedef cv::Signature<MyType (
+        cv::CtorForwarder<MyType *()>,
+        cv::CtorForwarder<MyType *(char const *)>,
+        cv::CtorForwarder<MyType *( int, double )>,
+        cv::CtorForwarder<MyType *( v8::Arguments const &)>
+    )> Ctors;
 
     // Function we want visible to JS:
     int func( double ) { return 42; }
