--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -14,14 +14,16 @@ v8-juice is primarily an experimentation ground, and not a product which aims to
 
 v8-juice is believed to work well, without any undocumented crash conditions and whatnot. It is used in at least one high-profile commercial product (which i unfortunately am not at liberty to name) to simplify the C++/JS binding process. In particular, the newer [V8Convert] API makes binding C/C++ functions and classes to !JavaScript really simple (making it any simpler would probably require a code generator).
 
+Having said that: since mid-2011, v8-juice itself is relatively static. It _is_ actively maintained and reported bugs will be fixed insofar as is possible within the library's current architecture and compatibility constraints. Future work is going mostly into the [V8Convert] API, however, and at some point the main `v8::juice` API will likely be re-based on top of `v8::convert`, in effect becoming a 3rd-party user of the `v8::convert` API. [V8Convert] focuses primarily on the conversion of types and functions between C++/JS. `v8::juice` does that, plus adds several "heavy-weight" features like [Plugins a plugins API]. The main difference between the two APIs is that [V8Convert] is header-only, whereas v8-juice is much more heavyweight and cannot realistically be implemented as a header-only library.
+
 ==Related work==
 
   * [https://github.com/tsa/vu8 vu8] provides many of the same features as v8-juice, and is one of the few bindings frameworks i've seen which uses templates to generate the bindings (as opposed to macros). Its class- and module-binding system is also easier to use that juice's. <em>If i wasn't using v8-juice, i'd be using vu8.</em> The [V8Convert] spin-off API was largely inspired by vu8.
   * [http://code.google.com/p/cproxyv8/ cproxyv8] is very similar in purpose to v8-juice, and appears to provide largely the same feature set for binding C++ types to v8.
-  * [http://code.google.com/p/v8cgi/ v8cgi] encapsulates features for hosting web applications written in !JavaScript.
+  * [http://code.google.com/p/v8cgi/ v8cgi] encapsulates features for hosting server-side web applications written in !JavaScript.
   * [http://nodejs.org/ nodejs] has a very impressive set of functionality and a well-thought-out module loading system. It is arguably the most popular v8-using project aside from the various Chromium-based browsers.
   * [http://flusspferd.org/ Flusspferd] is a similar library written for use with the [https://developer.mozilla.org/en/SpiderMonkey SpiderMonkey JavaScript engine]. (No longer maintained, as of mid-2011.)
-  * [http://spiderape.sourceforge.net SpiderApe] is another (no longer maintained) C++ wrapper for the !SpiderMonkey engine, and much of v8-juice's architecture was originally adapted from that library.
+  * [http://spiderape.sourceforge.net SpiderApe] is another (no longer maintained) C++ wrapper for the !SpiderMonkey engine, and v8-juice's [ConvertingTypes type-conversion API] was originally adapted from that library.
 
 One of the interesting things about vu8, cproxyv8, v8cgi, and nodejs is that they're not mutually exclusive with v8-juice. While there is some overlap in functionality, each can provide some parts which the other cannot. e.g., in my humble opinion v8-juice's main strengths lie in its native/JS type-conversion bits, whereas nodejs has a much nicer module-based plugin system than the one v8-juice provides. vu8 has a much nicer class/module-binding system as well.
 
